# trend-follower

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_american_tf.py  test_filters.py  test_volatility.py
trendfollower/: __init__.py  filters.py  volatility.py
trendfollower/core/: american_tf.py  filters.py  volatility.py
